@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-13T01:02:00Z",
+  "timestamp" : "2022-07-13T08:15:36Z",
   "count_outdated" : 387,
   "uniques_outdated" : 210,
   "count" : 419,
-  "uniques" : 226,
+  "uniques" : 227,
   "clones" : [
     {
       "timestamp": "2022-06-29T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-12T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
